--- a/TokyoOlympics2021/src/app/athletes/athletes.component.html
+++ b/TokyoOlympics2021/src/app/athletes/athletes.component.html
@@ -1,1 +1,93 @@
-<p>athletes works!</p>
+<form>
+  <table>
+    <tr>
+      <td>
+        <mat-form-field appearance="legacy">
+          <mat-label>Name and surname</mat-label>
+          <input matInput placeholder="name" name='name' [(ngModel)]='name'>
+        </mat-form-field>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <mat-form-field appearance="legacy">
+          <mat-label>Select country</mat-label>
+          <mat-select [(ngModel)]='country' [(value)]='country' name='country'>
+            <mat-option value="all">All countries</mat-option>
+            <mat-option *ngFor="let con of countries" [value]="con.name">
+              {{con.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <mat-form-field appearance="legacy">
+          <mat-label>Select sport</mat-label>
+          <mat-select [(ngModel)]='sport' [(value)]='sport' name='sport' (valueChange)='changeDisciplines()'>
+            <mat-option value="all">All sports</mat-option>
+            <mat-option *ngFor="let spo of sports" [value]="spo.name">
+              {{spo.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <mat-form-field appearance="legacy">
+          <mat-label>Select discpline</mat-label>
+          <mat-select [(ngModel)]='discipline' [(value)]='discipline' name='discipline'>
+            <mat-option value="all">All disciplines</mat-option>
+            <mat-option *ngFor="let disc of disciplines" [value]="disc">
+              {{disc}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <mat-radio-group [(ngModel)]="gender" name='gender'>
+          <mat-radio-button value='male'>Male</mat-radio-button><br>
+          <mat-radio-button value='female'>Female</mat-radio-button>
+        </mat-radio-group>
+      </td>
+    </tr>
+    <tr>
+      <section>
+        <mat-checkbox class="example-margin" value='medal'>just medal winners</mat-checkbox>
+      </section>
+    </tr>
+    <tr>
+      <td>
+        <button mat-raised-button color="primary" (click)='search()'>Search</button>
+      </td>
+    </tr>
+  </table>
+</form>
+<table mat-table [dataSource]="athletes" style="width: 100%;">
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let athlete"> {{athlete.name}} </td>
+  </ng-container>
+  <ng-container matColumnDef="country">
+    <th mat-header-cell *matHeaderCellDef> Country </th>
+    <td mat-cell *matCellDef="let athlete"> {{athlete.country}} </td>
+  </ng-container>
+  <ng-container matColumnDef="sport">
+    <th mat-header-cell *matHeaderCellDef> Sport </th>
+    <td mat-cell *matCellDef="let athlete"> {{athlete.sport}} </td>
+  </ng-container>
+  <ng-container matColumnDef="disciplines">
+    <th mat-header-cell *matHeaderCellDef> Discipline </th>
+    <td mat-cell *matCellDef="let athlete">{{athlete.disciplines}}</td>
+  </ng-container>
+  <ng-container matColumnDef="gender">
+    <th mat-header-cell *matHeaderCellDef> Gender </th>
+    <td mat-cell *matCellDef="let athlete"> {{athlete.gender}} </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
