--- a/TokyoOlympics2021/src/app/athletes/athletes.component.html
+++ b/TokyoOlympics2021/src/app/athletes/athletes.component.html
@@ -1,3 +1,4 @@
+<h1>Search Athletes</h1>
 <form>
   <table>
     <tr>
@@ -49,15 +50,19 @@
     </tr>
     <tr>
       <td>
-        <mat-radio-group [(ngModel)]="gender" name='gender'>
-          <mat-radio-button value='male'>Male</mat-radio-button><br>
-          <mat-radio-button value='female'>Female</mat-radio-button>
-        </mat-radio-group>
+        <mat-form-field appearance="legacy">
+          <mat-label>Sex</mat-label>
+          <mat-select [(value)]='gender'>
+            <mat-option value='none'>None</mat-option>
+            <mat-option value='male'>M</mat-option>
+            <mat-option value='female'>W</mat-option>
+          </mat-select>
+      </mat-form-field>
       </td>
     </tr>
     <tr>
       <section>
-        <mat-checkbox class="example-margin" value='medal'>just medal winners</mat-checkbox>
+        <mat-checkbox class="example-margin" value='medal' (click)='toggleIsMedalWinner()'>just medal winners</mat-checkbox>
       </section>
     </tr>
     <tr>
@@ -67,7 +72,7 @@
     </tr>
   </table>
 </form>
-<table mat-table [dataSource]="athletes" style="width: 100%;">
+<table mat-table [dataSource]="dataSource" style="width: 100%;">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
     <td mat-cell *matCellDef="let athlete"> {{athlete.name}} </td>
@@ -91,3 +96,4 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+<mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" aria-label="Select page of athletes"></mat-paginator>
