--- a/TokyoOlympics2021/src/app/competition/competition.component.html
+++ b/TokyoOlympics2021/src/app/competition/competition.component.html
@@ -1,4 +1,5 @@
 <h1>Add Competition</h1>
+<div style="display: flex;justify-content: center;">
 <mat-stepper linear="true" orientation='vertical' #stepper>
 <mat-step [stepControl]="firstFormGroup">
 <form [formGroup]='firstFormGroup'>
@@ -149,3 +150,4 @@
   </span>
 </mat-step>
 </mat-stepper>
+</div>
