--- a/TokyoOlympics2021/src/app/login/login.component.html
+++ b/TokyoOlympics2021/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<h2>Login form</h2>
+<h1>Login form</h1>
 <form>
   <table>
     <tr>
@@ -21,8 +21,8 @@
       </td>
     </tr>
     <tr>
-      <td>
-        <button mat-raised-button color="primary" (click)='login()'>Login</button>
+      <td style="justify-content: center; display: flex;">
+        <button mat-raised-button color="accent" (click)='login()'>Login</button>
       </td>
     </tr>
     <tr>
@@ -32,7 +32,7 @@
     </tr>
     <tr>
       <td>
-        <a routerLink='/register'>If you don't have an account, you can register here.</a>
+        <a routerLink='/register'  style="color: blueviolet">If you don't have an account, you can register here.</a>
       </td>
     </tr>
   </table>
