--- a/TokyoOlympics2021/src/app/register/register.component.html
+++ b/TokyoOlympics2021/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<h2>Registration form</h2>
+<h1>Registration form</h1>
 <form>
   <table>
     <tr>
@@ -76,8 +76,8 @@
       </td>
     </tr>
     <tr>
-      <td>
-        <button mat-raised-button color="primary" (click)='register()'>Register</button>
+      <td style="justify-content: center; display: flex;">
+        <button mat-raised-button color="accent" (click)='register()'>Register</button>
       </td>
     </tr>
     <tr>
@@ -87,7 +87,7 @@
     </tr>
     <tr>
       <td>
-        <a routerLink='/login'>If you already have an account, you can login here.</a>
+        <a routerLink='/login' style="color: blueviolet;">If you already have an account, you can login here.</a>
       </td>
     </tr>
   </table>
