--- a/TokyoOlympics2021/src/app/addsport/addsport.component.html
+++ b/TokyoOlympics2021/src/app/addsport/addsport.component.html
@@ -18,8 +18,8 @@
       </td>
     </tr>
     <tr>
-      <td>
-        <button mat-raised-button color="primary" (click)='addsport()'>Add</button>
+      <td style="justify-content: center; display: flex;">
+        <button mat-raised-button color="accent" (click)='addsport()'>Add</button>
       </td>
     </tr>
     <tr>
