--- a/TokyoOlympics2021/src/app/athletes/athletes.component.html
+++ b/TokyoOlympics2021/src/app/athletes/athletes.component.html
@@ -66,31 +66,31 @@
       </section>
     </tr>
     <tr>
-      <td>
-        <button mat-raised-button color="primary" (click)='search()'>Search</button>
+      <td style="justify-content: center; display: flex; padding-bottom: 20px;">
+        <button mat-raised-button color="accent" (click)='search()'>Search</button>
       </td>
     </tr>
   </table>
 </form>
 <table mat-table [dataSource]="dataSource" style="width: 100%;">
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Name </th>
     <td mat-cell *matCellDef="let athlete"> {{athlete.name}} </td>
   </ng-container>
   <ng-container matColumnDef="country">
-    <th mat-header-cell *matHeaderCellDef> Country </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Country </th>
     <td mat-cell *matCellDef="let athlete"> {{athlete.country}} </td>
   </ng-container>
   <ng-container matColumnDef="sport">
-    <th mat-header-cell *matHeaderCellDef> Sport </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Sport </th>
     <td mat-cell *matCellDef="let athlete"> {{athlete.sport}} </td>
   </ng-container>
   <ng-container matColumnDef="disciplines">
-    <th mat-header-cell *matHeaderCellDef> Discipline </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Discipline </th>
     <td mat-cell *matCellDef="let athlete">{{athlete.disciplines}}</td>
   </ng-container>
   <ng-container matColumnDef="gender">
-    <th mat-header-cell *matHeaderCellDef> Gender </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Gender </th>
     <td mat-cell *matCellDef="let athlete"> {{athlete.gender}} </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
