--- a/TokyoOlympics2021/src/app/countries/countries.component.html
+++ b/TokyoOlympics2021/src/app/countries/countries.component.html
@@ -2,17 +2,17 @@
 <div class="mat-elevation-z8">
 <table mat-table [dataSource]="dataSource" style="width: 100%;text-align: center;">
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Name </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;" class="classth"> Name </th>
     <td mat-cell *matCellDef="let country" style="width: 33%;">{{country.name}}</td>
   </ng-container>
   <ng-container matColumnDef="flag">
-    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Flag </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;" class="classth"> Flag </th>
     <td mat-cell *matCellDef="let country" style="width: 33%;">
       <img src="{{country.flagImgSrc}}" width='55px' height='36px' [alt]="country.name">
     </td>
   </ng-container>
   <ng-container matColumnDef="athletecnt">
-    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Number of athletes </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;" class="classth"> Number of athletes </th>
     <td mat-cell *matCellDef="let country" style="width: 33%;">{{country.numberOfAthletes}}</td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
