--- a/TokyoOlympics2021/src/app/updatecomp/updatecomp.component.html
+++ b/TokyoOlympics2021/src/app/updatecomp/updatecomp.component.html
@@ -1,19 +1,19 @@
 <table mat-table [dataSource]="competitions" style="width: 100%;" class="mat-elevation-z8">
   <ng-container matColumnDef="sport">
-    <th mat-header-cell *matHeaderCellDef> Sport </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Sport </th>
     <td mat-cell *matCellDef="let competition"> {{competition.sport}} </td>
   </ng-container>
   <ng-container matColumnDef="discipline">
-    <th mat-header-cell *matHeaderCellDef> Discipline </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Discipline </th>
     <td mat-cell *matCellDef="let competition"> {{competition.discipline}} </td>
   </ng-container>
   <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef> Type </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Type </th>
     <td mat-cell *matCellDef="let competition"> {{competition.type}} </td>
   </ng-container>
   <ng-container matColumnDef="venue">
-    <th mat-header-cell *matHeaderCellDef> Venue </th>
-    <td mat-cell *matCellDef="let competition" style="width: 100px">
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Venue </th>
+    <td mat-cell *matCellDef="let competition" >
       <mat-select name='venue' [(value)]='competition.venue'>
         <mat-option *ngFor="let ven of venues" [value]="ven">
           {{ven}}
@@ -22,15 +22,15 @@
     </td>
   </ng-container>
   <ng-container matColumnDef="start date" >
-    <th mat-header-cell *matHeaderCellDef>Start date</th>
-    <td mat-cell *matCellDef="let competition">
-      <input matInput [matDatepicker]="picker" (dateInput)='setDate(competition, $event)' style="width: 100px;">
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;">Start date</th>
+    <td mat-cell *matCellDef="let competition" style="text-align: center;">
+      <input matInput [matDatepicker]="picker" (dateInput)='setDate(competition, $event)'>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker style="width: 100px;"></mat-datepicker>
+      <mat-datepicker #picker ></mat-datepicker>
     </td>
   </ng-container>
   <ng-container matColumnDef="start time">
-    <th mat-header-cell *matHeaderCellDef>Start time</th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;">Start time</th>
     <td mat-cell *matCellDef="let competition">
         <mat-select style="width:45px">
           <mat-option *ngFor="let h of hours" [value]="h" (click)='setHour(competition, h)'>
@@ -47,7 +47,7 @@
   <ng-container matColumnDef="schedule">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let competition">
-      <button (click)='scheduleCompetition(competition)'>schedule</button>
+      <button mat-raised-button color='accent' (click)='scheduleCompetition(competition)'>schedule</button>
     </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
