--- a/TokyoOlympics2021/src/styles.css
+++ b/TokyoOlympics2021/src/styles.css
@@ -1,12 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body {
-  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
-  display: flex;
-  justify-content: center;
-}
 h1 {
   text-align: center;
   padding-top: 15px;
+}
+
+.classth {
+  background-color: blueviolet;
+  color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 500;
+  font-size: larger;
+  border-left: 1px white solid;
+  border-right: 1px white solid;
+}
+
+.mat-header-cell {
+  background-color: blueviolet;
+  color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 500;
+  font-size: larger;
+  border-left: 1px white solid;
+}
+
+form {
+  display: flex;justify-content: center;
+}
+
+.mat-cell {
+  text-align: center;
+}
+
+.headerh1 {
+  text-align: center;
+  font-size: 80px;
+
+}
+
+.activeroute {
+  color:blueviolet;
+  text-decoration: none;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
