Sad je gotov napickan

--- a/TokyoOlympics2021/src/styles.css
+++ b/TokyoOlympics2021/src/styles.css
@@ -17,7 +17,7 @@ h1 {
 .mat-header-cell {
   background-color: blueviolet;
   color: white;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: 500;
   font-size: larger;
   border-left: 1px white solid;
