--- a/TokyoOlympics2021/src/app/register-athletes/register-athletes.component.html
+++ b/TokyoOlympics2021/src/app/register-athletes/register-athletes.component.html
@@ -51,8 +51,8 @@
       </td>
     </tr>
     <tr>
-      <td>
-        <button mat-raised-button color="primary" (click)='register()'>Register</button>
+      <td style="justify-content: center; display: flex;">
+        <button mat-raised-button color="accent" (click)='register()'>Register</button>
       </td>
     </tr>
     <tr>
@@ -69,9 +69,19 @@
 </form>
 </mat-tab>
 <mat-tab label="Load from JSON file">
-  <input type='file' (change)="fileChanged($event)" accept=".json">
-  <button mat-raised-button color='primary' (click)="uploadFile()">Upload file</button><br>
-  <span style="white-space: pre; color: green">
+  <table style="justify-content: center; display: flex;">
+    <tr>
+      <td>
+        <input type='file' (change)="fileChanged($event)" accept=".json">
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <button mat-raised-button color='accent' (click)="uploadFile()">Upload file</button>
+      </td>
+    </tr>
+  </table>
+  <span style="white-space: pre; color: green;">
     {{message}}
   </span>
   <span style="white-space: pre; color: red">
