--- a/TokyoOlympics2021/src/app/add-tennis-results/add-tennis-results.component.html
+++ b/TokyoOlympics2021/src/app/add-tennis-results/add-tennis-results.component.html
@@ -9,7 +9,7 @@
     <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Result </th>
     <td mat-cell *matCellDef="let match">
       <mat-form-field appearance="legacy">
-        <mat-select name='result'>
+        <mat-select name='result' placeholder='match result'>
           <mat-option value='2-0' (click)='updateResults(match, true)'>2-0</mat-option>
           <mat-option value='2-1' (click)='updateResults(match, true)'>2-1</mat-option>
           <mat-option value='0-2' (click)='updateResults(match, false)'>0-2</mat-option>
@@ -21,6 +21,8 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<button (click)='saveresults()'>Save Results</button>
 </form>
+<div style="justify-content: center; display: flex; padding-top: 10px;">
+<button mat-raised-button color='accent' (click)='saveresults()'>Save results</button>
+</div>
 <div style="color: red;">{{errorMessage}}</div>
