--- a/TokyoOlympics2021/src/app/results-competition/results-competition.component.html
+++ b/TokyoOlympics2021/src/app/results-competition/results-competition.component.html
@@ -18,7 +18,7 @@
   </ng-container>
   <ng-container matColumnDef="start date and time" >
     <th mat-header-cell *matHeaderCellDef style="text-align: center;">Start date and time</th>
-    <td mat-cell *matCellDef="let competition">{{competition.startdatetime}}</td>
+    <td mat-cell *matCellDef="let competition">{{competition.startdatetime | date: 'short'}}</td>
   </ng-container>
   <ng-container matColumnDef="add results">
     <th mat-header-cell *matHeaderCellDef style="text-align: center;">Add Results</th>
