--- a/TokyoOlympics2021/src/app/updatecomp/updatecomp.component.html
+++ b/TokyoOlympics2021/src/app/updatecomp/updatecomp.component.html
@@ -1,3 +1,4 @@
+<h1>Schedule Competitions</h1>
 <table mat-table [dataSource]="competitions" style="width: 100%;" class="mat-elevation-z8">
   <ng-container matColumnDef="sport">
     <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Sport </th>
@@ -12,32 +13,38 @@
     <td mat-cell *matCellDef="let competition"> {{competition.type}} </td>
   </ng-container>
   <ng-container matColumnDef="venue">
-    <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Venue </th>
+    <th mat-header-cell *matHeaderCellDef style="text-align: center;">Selected Venue</th>
     <td mat-cell *matCellDef="let competition" >
+      <mat-form-field>
+      <mat-label>Choose a venue</mat-label>
       <mat-select name='venue' [(value)]='competition.venue'>
         <mat-option *ngFor="let ven of venues" [value]="ven">
           {{ven}}
         </mat-option>
       </mat-select>
+    </mat-form-field>
     </td>
   </ng-container>
-  <ng-container matColumnDef="start date" >
+  <ng-container matColumnDef="start date">
     <th mat-header-cell *matHeaderCellDef style="text-align: center;">Start date</th>
-    <td mat-cell *matCellDef="let competition" style="text-align: center;">
-      <input matInput [matDatepicker]="picker" (dateInput)='setDate(competition, $event)'>
+    <td mat-cell *matCellDef="let competition">
+    <mat-form-field>
+      <mat-label>Choose a date</mat-label>
+      <input matInput [matDatepicker]="picker" (dateInput)='setDate(competition, $event)' [value]='competition.startdatetime'>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker ></mat-datepicker>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
     </td>
   </ng-container>
   <ng-container matColumnDef="start time">
     <th mat-header-cell *matHeaderCellDef style="text-align: center;">Start time</th>
     <td mat-cell *matCellDef="let competition">
-        <mat-select style="width:45px">
+        <mat-select style="width:45px" placeholder='HH'>
           <mat-option *ngFor="let h of hours" [value]="h" (click)='setHour(competition, h)'>
             {{h}}h
           </mat-option>
         </mat-select>
-        <mat-select style="width:60px">
+        <mat-select style="width:60px" placeholder='MM'>
           <mat-option *ngFor="let min of minutes" [value]="min" (click)='setMinute(competition, min)'>
             {{min}}min
           </mat-option>
@@ -48,6 +55,7 @@
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let competition">
       <button mat-raised-button color='accent' (click)='scheduleCompetition(competition)'>schedule</button>
+      <div style="color: red;">{{compToErrorMsgMap.get(competition)}}</div>
     </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
